Fixed on mobile

--- a/app/assets/less/sorting-article.less
+++ b/app/assets/less/sorting-article.less
@@ -57,3 +57,13 @@ svg.sorting-demo {
     margin-bottom: 0.75em;
   }
 }
+
+@media all and (max-width: 450px) {
+  svg.sorting-demo {
+    height: 200px;
+  }
+
+  .sort-controls {
+    position: static;
+  }
+}
